--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "starbucks-my-store-passport-manager",
   "private": true,
   "version": "0.0.0",
+  "homepage": ".",
   "type": "module",
   "scripts": {
     "dev": "vite",
@@ -9,12 +10,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "react": "^19.2.3",
-    "react-dom": "^19.2.3",
+    "@dataconnect/generated": "file:src/dataconnect-generated",
     "@google/genai": "^1.38.0",
-    "lucide-react": "^0.563.0",
+    "firebase": "^12.8.0",
     "leaflet": "^1.9.4",
-    "firebase": "^12.8.0"
+    "lucide-react": "^0.563.0",
+    "react": "^19.2.3",
+    "react-dom": "^19.2.3"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
