--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
   "dependencies": {
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
+    "react-error-boundary": "^5.0.0",
     "@google/genai": "^1.38.0",
     "lucide-react": "^0.563.0",
     "leaflet": "^1.9.4",
-    "firebase": "^10.8.0"
+    "firebase": "^10.8.0",
+    "vite": "^7.3.1"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
